# fastapi-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  db.sqlite3  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/core/: config.yaml
alembic/: env.py
alembic/versions/: 03137a3a56ba_init_table.py  1a7edf0c7146_init_table.py  429c324f2189_init_table.py  4503f7ef7bc0_init_table.py  6f6a6669bca7_init_table.py  871c40c81a83_init_table.py  a78cf029de22_init_table.py  c1051e123a63_init_table.py  d5363318efab_init_table.py  dde8024fcea7_init_table.py  de9b00597988_init_table.py  f000aba9d679_init_table.py
app/: app.py  main.py
app/admin/login/: admin.py  api.py  login_crud.py  (+2 more)
app/core/: admin.py  config.py  crud.py  database.py  dept.py  exceptions.py  jinja.py  lifespan.py  logger.py  middleware.py  middlewares.py  openai.py  openapi.py  redis.py  schemas.py  security.py  slowapi.py
app/models/: chat.py  config.py  link_model.py  menu.py  role.py  user.py
app/services/: user_services.py
static/css/: admin.css
templates/: custom.html  index.jinja
templates/auth/: dashboard.jinja  login.jinja
templates/configs/: list.jinja
templates/layout/: base.jinja  header.jinja
templates/macros/: drawer.jinja  list.jinja
templates/menus/: list.jinja
templates/roles/: list.jinja
templates/users/: list.jinja
tests/: agent.py  test_anthropic.py  test_anthropic_client.js  test_anthropic_mock.py  test_anthropic_server.py
(+32 files in other folders)
