[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-mcp>=0.4.0",
    "fastapi[all]>=0.128.0",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.3.0",
    "redis>=7.3.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "anthropic[aiohttp]>=0.85.0",
    "ruff>=0.15.6",
]
